--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
         <!-- stylesheets -->
-        <link rel="stylesheet" href="/static/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/assets/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/static/assets/css/owl.carousel.css">
-        <link rel="stylesheet" href="/static/assets/css/owl.theme.css">
-         <link rel="stylesheet" href="/static/assets/css/owl.transitions.css"> 
-        <link rel="stylesheet" href="/static/assets/js/nivo-lightbox/nivo-lightbox.css">
-        <link rel="stylesheet" href="/static/assets/js/nivo-lightbox/nivo-lightbox-theme.css">
-        <link rel="stylesheet" href="/static/assets/css/animate.css">
-        <link rel="stylesheet" href="/static/assets/css/style.css">
+        <link rel="stylesheet" href="static/assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="static/assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="static/assets/css/owl.carousel.css">
+        <link rel="stylesheet" href="static/assets/css/owl.theme.css">
+         <link rel="stylesheet" href="static/assets/css/owl.transitions.css"> 
+        <link rel="stylesheet" href="static/assets/js/nivo-lightbox/nivo-lightbox.css">
+        <link rel="stylesheet" href="static/assets/js/nivo-lightbox/nivo-lightbox-theme.css">
+        <link rel="stylesheet" href="static/assets/css/animate.css">
+        <link rel="stylesheet" href="static/assets/css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- google fonts -->
-        <link href='https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'>
 
 
     </head>
@@ -53,7 +53,7 @@
             <div class="col-xs-6">
                 <div class="logo">
                     <a data-scroll href="#header">
-                      <img id="navLogo" src="/static/assets/img/ammarthecoder logo.jpg" height="72px" width="72px">
+                      <img id="navLogo" src="static/assets/img/ammarthecoder logo.jpg" height="72px" width="72px">
                     </a>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <div class="subscribe">
                         <p class="subscribe-text">Subscribe Now</p>
                         <a target="_blank" href="https://www.youtube.com/channel/UCV3TvDeWDwFegw6Z8rG5DAw?sub_confirmation=1">
-                            <img src="/static/assets/img/youtube-icon.png">
+                            <img src="static/assets/img/youtube-icon.png">
                         </a>
                     </div> <!--  /.subscribe  -->
                 </div>
@@ -127,7 +127,7 @@
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h2 class="section-title">Featured Videos</h2>
-                            <img src="/static/assets/img/headline-bottom.png">
+                            <img src="static/assets/img/headline-bottom.png">
                         </div>  <!--  /.section-heading  -->
                     </div>
                 </div> <!--  /.row  -->
@@ -169,7 +169,7 @@
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h2 class="section-title">About Me</h2>
-                            <img src="/static/assets/img/headline-bottom.png">
+                            <img src="static/assets/img/headline-bottom.png">
                         </div> <!--  / .section-heading  -->
                     </div>
                 </div> <!--  / .row  -->
@@ -179,7 +179,7 @@
 
                         <div class="col-md-3 col-sm-12 col-xs-12">
                             <div class="about-img">
-                                <img class="img-responsive" src="/static/assets/img/ammarthecoder logo.jpg">
+                                <img class="img-responsive" src="static/assets/img/ammarthecoder logo.jpg">
                             </div>
                         </div>
 
@@ -258,20 +258,20 @@
 
 
         <!-- Necessery scripts -->
-        <script src="/static/assets/js/jquery-2.1.3.min.js"></script>
-        <script src="/static/assets/js/jquery.actual.min.js"></script>
-        <script src="/static/assets/js/bootstrap.min.js"></script>
-        <script src="/static/assets/js/jquery.fittext.js"></script>
-        <script src="/static/assets/js/modernizr.js"></script>
-        <script src="/static/assets/js/gestures.js"></script>
-        <script src="/static/assets/js/jquery.carouFredSel.min.js"></script>
-        <script src="/static/assets/js/jquery.themepunch.plugins.min.js"></script>
-        <script src="/static/assets/js/jquery.themepunch.revolution.min.js"></script>
-        <script src="/static/assets/js/smooth-scroll.js"></script>
-        <script src="/static/assets/js/owl.carousel.js"></script>
-        <script src="/static/assets/js/wow.min.js"></script>
-        <script src="/static/assets/js/nivo-lightbox/nivo-lightbox.min.js"></script>
-        <script src="/static/assets/js/script.js"></script>
+        <script src="static/assets/js/jquery-2.1.3.min.js"></script>
+        <script src="static/assets/js/jquery.actual.min.js"></script>
+        <script src="static/assets/js/bootstrap.min.js"></script>
+        <script src="static/assets/js/jquery.fittext.js"></script>
+        <script src="static/assets/js/modernizr.js"></script>
+        <script src="static/assets/js/gestures.js"></script>
+        <script src="static/assets/js/jquery.carouFredSel.min.js"></script>
+        <script src="static/assets/js/jquery.themepunch.plugins.min.js"></script>
+        <script src="static/assets/js/jquery.themepunch.revolution.min.js"></script>
+        <script src="static/assets/js/smooth-scroll.js"></script>
+        <script src="static/assets/js/owl.carousel.js"></script>
+        <script src="static/assets/js/wow.min.js"></script>
+        <script src="static/assets/js/nivo-lightbox/nivo-lightbox.min.js"></script>
+        <script src="static/assets/js/script.js"></script>
 
 
 
