--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <link rel="stylesheet" href="static/assets/css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- google fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'>
 
 
     </head>
     <body id="body">
         <!--[if lt IE 7]>
-                <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+                <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="fb-root"></div>
         <script>
@@ -249,7 +249,7 @@
                     </div>
 
                     <div class="col-sm-6 col-xs-12">
-                        <p class="designed">Designed and Developed by<a href="http://youtube.com/c/GuruTheCoder" target="_blank"> GuruTheCoder</a></p> <!--  /.designed  -->
+                        <p class="designed">Designed and Developed by<a href="https://youtube.com/c/GuruTheCoder" target="_blank"> GuruTheCoder</a></p> <!--  /.designed  -->
                     </div>
 
                 </div> <!--  /.row  -->
