--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
                                         <h3 class="heading">About Me</h3>
                                         <p>
                                         AmmarTheCoder teaches you Coding and Graphic designing
-                                        it clears al your doubts through comments
+                                        it clears all your doubts through comments
                                         So,what are you waiting for
-                                        go Subscribe!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!11
+                                        go Subscribe!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                                         </p>
                                     </div> <!--  / .about-desccription  -->  
                                 </div>
