--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="dropdown-menu">
                         <div class="arrow-up"></div>
                         <ul><li>
-                                <a data-scroll href="/">Home<i class="fa fa-home"></i></a>
+                                <a data-scroll href="/ammarthecoder">Home<i class="fa fa-home"></i></a>
                             </li>
                             <li>
                                 <a data-scroll href="#featured">Videos<i class="fa fa-youtube-play"></i></a>
