--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                         
                         <iframe width="420" height="290" src="https://www.youtube.com/watch?v=04Hj-JSyFB8" frameborder="0" allowfullscreen></iframe><!-- /.latest_item -->
                         
-                    </div>
+                    </div> <!-- /.latest_item -->
+
 
                     <div class="latest_item">
                         <iframe width="420" height="290" src="https://www.youtube.com/embed/0uCNN_PP2fs" frameborder="0" allowfullscreen></iframe>
