--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         
                         <iframe width="420" height="290" src="https://www.youtube.com/watch?v=04Hj-JSyFB8" frameborder="0" allowfullscreen></iframe><!-- /.latest_item -->
                         
-                    </div> <!-- /.latest_item -->
+                    </div> 
 
 
                     <div class="latest_item">
