--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                     </div>
                     <div class="latest_item">
                         
-                        <iframe width="420" height="290" src="https://www.youtube.com/watch?v=04Hj-JSyFB8" frameborder="0" allowfullscreen></iframe><!-- /.latest_item -->
+                        <iframe width="420" height="290" src="https://www.youtube.com/watch?v=04Hj-JSyFB8" frameborder="0" allowfullscreen>
                         
-                    </div> 
+                    </div> </iframe><!-- /.latest_item --> 
 
 
                     <div class="latest_item">
