--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                     
                     <div class="latest_item">
-                        <iframe width="420" height="290" src="https://www.youtube.com/watch?v=04Hj-JSyFB8" frameborder="0" allowfullscreen></iframe>    
+                        <iframe width="420" height="290" src="https://youtu.be/04Hj-JSyFB8" frameborder="0" allowfullscreen></iframe>    
                     </div> <!-- /.latest_item --> 
                     
                     <div class="latest_item">
