--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@
                         <iframe width="420" height="290" src="https://www.youtube.com/embed/v0zM4L5hYPA" frameborder="0" allowfullscreen></iframe><!-- /.latest_item -->
                     </div>
                     
-                    <div class="latest_item">
-                        <iframe width="420" height="290" src="https://youtu.be/04Hj-JSyFB8" frameborder="0" allowfullscreen></iframe>    
-                    </div> <!-- /.latest_item --> 
+                    <iframe width="420" height="290" src="https://www.youtube.com/embed/04Hj-JSyFB8" frameborder="0" allowfullscreen></iframe>
                     
                     <div class="latest_item">
                         <iframe width="420" height="290" src="https://www.youtube.com/embed/0uCNN_PP2fs" frameborder="0" allowfullscreen></iframe>
